<resources>
    <string name="app_name">SangariyaAdarshSrSecSchool</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="notification">Notify</string>
    <string name="likes">Favs</string>
    <string name="happy">Happy</string>
    <string name="room">Room</string>
    <string name="restaurant">Food</string>
    <string name="shop">Shop</string>
    <string name="photos">Photos</string>
    <string name="call">Call</string>
    <string name="About">About Us</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Events_Title"> <u> Events </u> </string>
    <string name="Holiday_Title"> <u> Holidays </u> </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
